2001-12-23  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgettextlib_la_SOURCES): Add the contents of
	libgettextlib_la_HEADER, except liballoca.h.
	(LIBADD_SOURCE): Add the contents of LIBADD_HEADER, plus liballoca.h.
	(UNUSED_SOURCE): Add the contents of UNUSED_HEADER.
	(libgettextlib_la_HEADER, LIBADD_HEADER, UNUSED_HEADER): Remove
	variables.
	(noinst_HEADERS): Update.

2001-12-21  Bruno Haible  <bruno@clisp.org>

	* localcharset.c (ISSLASH): Provide definition for DOS-like systems.
	* basename.c (FILESYSTEM_PREFIX_LEN, ISSLASH): Likewise.

2001-12-22  Bruno Haible  <bruno@clisp.org>

	* binary-io.h: New file, extracted from system.h.
	* exit.h: New file, extracted from system.h.
	* liballoca.h: New file, extracted from system.h.
	* pathname.h: New file, extracted from system.h.
	* stpcpy.h: New file, extracted from system.h.
	* stpncpy.h: New file, extracted from system.h.
	* strcase.h: New file, extracted from system.h.
	* xgetcwd.h: New file, extracted from system.h.
	* system.h: Remove file.
	* Makefile.am (libgettextlib_la_SOURCES): Remove xgetcwd.c.
	(libgettextlib_la_HEADER): Add binary-io.h, exit.h, liballoca.h,
	pathname.h. Remove system.h.
	(LIBADD_HEADER): Add stpcpy.h, stpncpy.h, strcase.h.
	(UNUSED_SOURCE): Add xgetcwd.c.
	(UNUSED_HEADER): Add xgetcwd.h.
	* argmatch.c: Include exit.h instead of <stdlib.h>.
	(EXIT_FAILURE): Remove fallback definition.
	* concatpath.c: Include pathname.h, <string.h>, stpcpy.h instead of
	system.h.
	* copy-file.c: Include <unistd.h>, binary-io.h, exit.h instead of
	system.h.
	(O_BINARY): Remove fallback definition.
	* execute.c: Include exit.h.
	(EXIT_FAILURE): Remove fallback definition.
	* findprog.c: Include pathname.h instead of system.h.
	* javacomp.c: Include liballoca.h. Remove alloca() declaration stuff.
	* javaexec.c: Likewise.
	* setenv.c: Likewise.
	* linebreak.h: Include <stddef.h> instead of <stdlib.h>.
	* linebreak.c: Include <stdlib.h> instead of <stddef.h>.
	* pipe-bidi.c: Include exit.h.