@@ -1,3 +1,9 @@
+2001-12-23  Bruno Haible  <bruno@clisp.org>
+
+	* msgexec.c (process_string): Use xsetenv instead of setenv.
+	* msginit.c (canonical_locale_charset): Likewise.
+	(get_title): Likewise.
+
 2001-12-22  Bruno Haible  <bruno@clisp.org>
 
 	* dir-list.c: Include <stddef.h> instead of <stdlib.h>.
